--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,9 @@ body {
 .grid-special-color {
   @apply p-6 bg-gradient-to-b from-royal to-lavender rounded-2xl;
 }
+.grid-speciall-color {
+  @apply p-6 bg-gradient-to-b from-slate-800 to-slate-900 rounded-2xl;
+}
 .grid-black-color {
   @apply p-6 bg-gradient-to-tl from-[#3A3A3A] via-[#242424] to-[#3A3A3A] rounded-2xl;
 }
